problem solved by sorting list.